alignment of images fixed

--- a/css/style.css
+++ b/css/style.css
@@ -89,3 +89,9 @@ footer{
 .nav-link{
     font-family:abril_fatfaceregular ;
 }
+#faq-img3{
+    padding-bottom: 5em;
+}
+#video-div{
+    padding-bottom: 3em;
+}
